// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Should become visible 1`] = `
<div>
  <div
    class="styled__Background-sc-1gkpoto-1 crBfyX"
    id="modal-overlay"
    style="opacity: 0;"
  >
    <div
      class="modal-container styled__Container-sc-1gkpoto-2 enawXZ"
      style="transform: scale(0.5) translateZ(0);"
    >
      <div
        class="modal-header styled__Header-sc-1gkpoto-3 gtBJHt"
      >
        <div
          class="styled__TextContainer-sc-1gkpoto-9 GkMdz"
        >
          <h1
            class="modal-title styled__Title-sc-1gkpoto-4 kvaykP"
          >
            mocked tittle
          </h1>
          <h3
            class="styled__Description-sc-1gkpoto-5 jbdhCY"
          />
        </div>
        <svg
          aria-hidden="true"
          class="styled__Close-sc-1gkpoto-0 kZkAkZ StyledIconBase-sc-bdy9j4 cCvWXa"
          fill="currentColor"
          focusable="false"
          height="22"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm0 394c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h404c3.3 0 6 2.7 6 6v340zM356.5 194.6L295.1 256l61.4 61.4c4.6 4.6 4.6 12.1 0 16.8l-22.3 22.3c-4.6 4.6-12.1 4.6-16.8 0L256 295.1l-61.4 61.4c-4.6 4.6-12.1 4.6-16.8 0l-22.3-22.3c-4.6-4.6-4.6-12.1 0-16.8l61.4-61.4-61.4-61.4c-4.6-4.6-4.6-12.1 0-16.8l22.3-22.3c4.6-4.6 12.1-4.6 16.8 0l61.4 61.4 61.4-61.4c4.6-4.6 12.1-4.6 16.8 0l22.3 22.3c4.7 4.6 4.7 12.1 0 16.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="styled__Content-sc-1gkpoto-8 cGAdLK"
      />
    </div>
  </div>
</div>
`;

exports[`<Modal /> Should become visible 2`] = `
<div>
  <div
    class="styled__Background-sc-1gkpoto-1 crBfyX"
    id="modal-overlay"
    style="opacity: 1;"
  >
    <div
      class="modal-container styled__Container-sc-1gkpoto-2 enawXZ"
      style="transform: none;"
    >
      <div
        class="modal-header styled__Header-sc-1gkpoto-3 gtBJHt"
      >
        <div
          class="styled__TextContainer-sc-1gkpoto-9 GkMdz"
        >
          <h1
            class="modal-title styled__Title-sc-1gkpoto-4 kvaykP"
          >
            mocked tittle
          </h1>
          <h3
            class="styled__Description-sc-1gkpoto-5 jbdhCY"
          />
        </div>
        <svg
          aria-hidden="true"
          class="styled__Close-sc-1gkpoto-0 kZkAkZ StyledIconBase-sc-bdy9j4 cCvWXa"
          fill="currentColor"
          focusable="false"
          height="22"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm0 394c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h404c3.3 0 6 2.7 6 6v340zM356.5 194.6L295.1 256l61.4 61.4c4.6 4.6 4.6 12.1 0 16.8l-22.3 22.3c-4.6 4.6-12.1 4.6-16.8 0L256 295.1l-61.4 61.4c-4.6 4.6-12.1 4.6-16.8 0l-22.3-22.3c-4.6-4.6-4.6-12.1 0-16.8l61.4-61.4-61.4-61.4c-4.6-4.6-4.6-12.1 0-16.8l22.3-22.3c4.6-4.6 12.1-4.6 16.8 0l61.4 61.4 61.4-61.4c4.6-4.6 12.1-4.6 16.8 0l22.3 22.3c4.7 4.6 4.7 12.1 0 16.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="styled__Content-sc-1gkpoto-8 cGAdLK"
      />
    </div>
  </div>
</div>
`;

exports[`<Modal /> Should not render modal 1`] = `<div />`;

exports[`<Modal /> Should render modal 1`] = `<div />`;

exports[`<Modal /> should render children correctly 1`] = `
<div>
  <div
    class="styled__Background-sc-1gkpoto-1 crBfyX"
    id="modal-overlay"
    style="opacity: 0;"
  >
    <div
      class="modal-container styled__Container-sc-1gkpoto-2 enawXZ"
      style="transform: scale(0.5) translateZ(0);"
    >
      <div
        class="modal-header styled__Header-sc-1gkpoto-3 gtBJHt"
      >
        <div
          class="styled__TextContainer-sc-1gkpoto-9 GkMdz"
        >
          <h1
            class="modal-title styled__Title-sc-1gkpoto-4 kvaykP"
          >
            mocked tittle
          </h1>
          <h3
            class="styled__Description-sc-1gkpoto-5 jbdhCY"
          />
        </div>
        <svg
          aria-hidden="true"
          class="styled__Close-sc-1gkpoto-0 kZkAkZ StyledIconBase-sc-bdy9j4 cCvWXa"
          fill="currentColor"
          focusable="false"
          height="22"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm0 394c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h404c3.3 0 6 2.7 6 6v340zM356.5 194.6L295.1 256l61.4 61.4c4.6 4.6 4.6 12.1 0 16.8l-22.3 22.3c-4.6 4.6-12.1 4.6-16.8 0L256 295.1l-61.4 61.4c-4.6 4.6-12.1 4.6-16.8 0l-22.3-22.3c-4.6-4.6-4.6-12.1 0-16.8l61.4-61.4-61.4-61.4c-4.6-4.6-4.6-12.1 0-16.8l22.3-22.3c4.6-4.6 12.1-4.6 16.8 0l61.4 61.4 61.4-61.4c4.6-4.6 12.1-4.6 16.8 0l22.3 22.3c4.7 4.6 4.7 12.1 0 16.8z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="styled__Content-sc-1gkpoto-8 cGAdLK"
      >
        mocked content text
      </div>
    </div>
  </div>
</div>
`;
